# orion-test-framework

./: README.md  ideas-for-admin-tool.txt  ideas.txt  pom.xml
other-test-frameworks/selenium-trunk/common/: repositories.bzl  selenium_manager.bzl
other-test-frameworks/selenium-trunk/common/devtools/: pdl.py
other-test-frameworks/selenium-trunk/common/devtools/chromium/v140/: browser_protocol.pdl
other-test-frameworks/selenium-trunk/common/devtools/chromium/v141/: browser_protocol.pdl
other-test-frameworks/selenium-trunk/common/devtools/chromium/v142/: browser_protocol.pdl
other-test-frameworks/selenium-trunk/java/: BUILD.bazel  maven_install.json  spotbugs-excludes.xml  version.bzl
other-test-frameworks/selenium-trunk/java/private/: java_library.bzl
other-test-frameworks/selenium-trunk/java/src/org/openqa/selenium/: HasDownloads.java  InvalidSelectorException.java  NoSuchElementException.java  ScriptKey.java  StaleElementReferenceException.java  UnpinnedScriptKey.java
other-test-frameworks/selenium-trunk/java/src/org/openqa/selenium/bidi/permissions/: BUILD.bazel  PermissionState.java
other-test-frameworks/selenium-trunk/java/src/org/openqa/selenium/concurrent/: BUILD.bazel  Lazy.java  package-info.java
other-test-frameworks/selenium-trunk/java/src/org/openqa/selenium/redis/: BUILD.bazel
other-test-frameworks/selenium-trunk/java/test/org/openqa/selenium/: HistoryNavigationTest.java  ProxySettingTest.java  SlowLoadingPageTest.java  WindowTest.java
other-test-frameworks/selenium-trunk/java/test/org/openqa/selenium/concurrent/: BUILD.bazel  LazyTest.java
other-test-frameworks/selenium-trunk/scripts/: update_cdp.py  update_py_dependencies.sh
other-test-resources/testing-QA/awesome-tap-main/: readme.md
src/main/java/com/yapily/e2ejunit/: E2ETestBase.java
src/main/java/com/yapily/e2ejunit/api/: APICall.java  HTTPClient.java  HTTPResponse.java  HTTPResponseHandler.java  NoRedirectStrategy.java
src/main/java/com/yapily/e2ejunit/model/: AccountDetails.java  Configuration.java  HostedPaymentService.java  HttpClientConfiguration.java  IAMService.java
src/main/java/com/yapily/orione2e/: E2ETestBase.java  Scenario.java  YAMLProcessor.java
src/main/java/com/yapily/orione2e/api/: APICall.java  HTTPClient.java  HTTPResponse.java  HTTPResponseHandler.java  NoRedirectStrategy.java
src/main/java/com/yapily/orione2e/glue/: Glue.java  GlueTestExecutionListener.java
src/main/java/com/yapily/orione2e/lifecycle/: AfterEach.java  AfterEachTestExecutionListener.java  BeforeEachTestExecutionListener.java  Given.java  (+1 more)
src/test/java/com/yapily/e2ejunit/: Test1.java
src/test/java/com/yapily/orione2e/: AfterEachFunctions.java  GivenFunctions.java  GlueFunctions.java  Test1.java
src/test/resources/: test1Config.yaml
(+271 files in other folders)
