load("//java:defs.bzl", "java_library")

java_library(
    name = "concurrent",
    srcs = glob(["*.java"]),
    visibility = [
        "//java/src/org/openqa/selenium/bidi:__subpackages__",
        "//java/src/org/openqa/selenium/devtools:__subpackages__",
        "//java/src/org/openqa/selenium/events:__subpackages__",
        "//java/src/org/openqa/selenium/grid:__subpackages__",
        "//java/src/org/openqa/selenium/remote:__subpackages__",
        "//java/test/org/openqa/selenium/concurrent:__subpackages__",
    ],
    deps = [
        "//java/src/org/openqa/selenium:core",
        "@maven//:org_jspecify_jspecify",
    ],
)
