load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "JUNIT5_DEPS", "java_test_suite")

java_test_suite(
    name = "SmallTests",
    size = "small",
    srcs = glob(["*Test.java"]),
    deps = [
        "//java/src/org/openqa/selenium/concurrent",
        "//java/test/org/openqa/selenium/testing:annotations",
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.assertj:assertj-core"),
    ] + JUNIT5_DEPS,
)
